fixed navbar on mobile

--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -3,6 +3,8 @@ $triangle_thickness: 2px;
 $transition_time: 0.4s ease;
 
 .nav__container__scrolled {
+  display: flex;
+  justify-content: space-between;
   transition: 0.4s ease;
   filter: drop-shadow(0 4px 5px #00000060);
   background-color: #243448;
@@ -12,6 +14,8 @@ $transition_time: 0.4s ease;
   position: fixed;
 }
 .nav__container {
+  display: flex;
+  justify-content: space-between;
   transition: 0.4s ease;
   background-color: #243448;
   width: 100%;
@@ -21,6 +25,7 @@ $transition_time: 0.4s ease;
 }
 
 .nav__header {
+  width: 14rem;
   & a {
     transition: $transition_time;
   }
@@ -33,8 +38,10 @@ $transition_time: 0.4s ease;
 }
 .nav__links {
   display: grid;
-  grid-template-columns: auto 4rem 4.5rem 9.2rem 5.3rem;
-  column-gap: 0;
+  text-align: center;
+  grid-template-columns: 3vw 4vw 8vw 4vw;
+  grid-template-rows: 30px;
+  column-gap:15px;
 }
 .nav__item {
   font-size: 1rem;
