--- a/src/styles/mobileStyles.scss
+++ b/src/styles/mobileStyles.scss
@@ -1,34 +1,37 @@
 @media (max-width: 900px) {
   //navbar
   .nav__container {
+    display: flex;
+    flex-direction:column;
     padding: 0;
   }
   .menu {
     display: flex;
-    left: 48%;
+    left: 46vw;
+    margin-top: 10px;
   }
   .nav__item,
   .nav__header,
   .nav__item__drop {
     display: none;
   }
-  .nav__item__burger,
-  .nav__header__burger,
-  .nav__item__drop__burger {
-    & a {
-      text-decoration: none;
-      color: $text-color;
-    }
-    display: grid;
-    width: 100vw;
+
+  .nav__header__burger
+  {
+    margin-top: 15vh;
     background-color: $background;
-    grid-template-rows: repeat(1, 1fr);
-    justify-content: center;
+  padding-bottom: 3vh;
+  text-align: center;
   }
-  .nav__item__burger,
-  .nav__item__drop__burger {
-    padding: 5px 0;
+.nav__item__burger, .nav__item__drop__burger{
+  padding-bottom: 1rem;
+  background-color: $background;
+  width:100%;
+
+  & a{
+    text-decoration: none;
   }
+}
 
   .dropdown__decoration__active {
     border: solid #e5effe;
@@ -40,7 +43,8 @@
     display: none;
     opacity: 0;
     &__active {
-      margin-left: -40px;
+      // margin-left: -40px;
+      width: 100vw;
       background-color: $background;
       transition: $transition_time;
       text-align: center;
@@ -51,8 +55,9 @@
     }
   }
   .nav__links {
-    display: block;
-    margin-top: 75px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
 
   //About
